more v4l2 settings, /usr/include/linux/videodev2.h is not newest.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ PROJECT( v4l2-lib )
 #set(OpenCV_DIR "/home/thomas/build/misc/opencv/build")
 #my acer s3 ubuntu
 set(OpenCV_DIR "/home/thomas/build/biotrump-cv/out/openCV/2.4.9.x-static")
+#set(OpenCV_DIR "/home/thomas/build/biotrump-cv/out/openCV/2.4.9.x")
 FIND_PACKAGE( OpenCV REQUIRED)
 
 #openMP to avoid link error : omp_xxx error!
