1. v4l2-lib : libv4l2-${TARGET_ARCH}.a     TARGET_ARCH :x86_64,x86_32, arm, arm_64.... 2. CMAKE will check shell ENVs first, if shell ENVs does not exist,     it will check it's default settings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,17 @@ cmake_minimum_required(VERSION 2.8)
 #C and C++ APIs for V4L2 under openCV
 PROJECT( v4l2-lib )
 
+if(NOT ANDROID_NDK)
+
 message("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
 message("PROJECT_NAME : ${PROJECT_NAME}")
 message("v4l2-lib_SOURCE_DIR : ${v4l2-lib_SOURCE_DIR}")
 message("v4l2-lib_BINARY_DIR : ${v4l2-lib_BINARY_DIR}")
+
+if("${BCV_ENV_EXPORTED}" STREQUAL "")
+#". setup.sh " to export .config to CMAKE build system
+#include(${BCV_SOURCE_DIR}/cmake/CVEnvImport.cmake)
+endif()
 
 #my mozilla PC for openCV build
 #set(OpenCV_DIR "/home/thomas/build/misc/opencv/build")
@@ -28,9 +35,12 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${v4l2-lib_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${v4l2-lib_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${v4l2-lib_BINARY_DIR}/lib)
 
+if("${TARGET_ARCH}" STREQUAL "")
+	set(TARGET_ARCH, "x86_64")
+endif()
 
 #build a static lib
-ADD_LIBRARY(v4l2-x86 STATIC
+ADD_LIBRARY(v4l2-${TARGET_ARCH} STATIC
 	Webcam.cpp
 	CameraFrame.cpp
 	capture-v4l2.c
@@ -38,3 +48,4 @@ ADD_LIBRARY(v4l2-x86 STATIC
 
 #dynamic or static link to dependent openCV libs
 #TARGET_LINK_LIBRARIES( v4l2-lib ${OpenCV_LIBS} )
+endif(NOT ANDROID_NDK)
